@@ -10,6 +10,9 @@ Graphics and database handling
 
 User interface & dialog boxes
 -------------------------------
+* Fill pattern definition
+* Color definition
+* Layer definition
 
 --------------------------------------------------------------------------------
 
